--- a/components.json
+++ b/components.json
@@ -1,16 +1,15 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
-  "rsc": true,
-  "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/app/globals.css",
+    "css": "app/globals.css",
     "baseColor": "slate",
     "cssVariables": true
   },
+  "rsc": false,
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils"
+    "utils": "@/lib/utils",
+    "components": "@/components"
   }
 }
