--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
     "@directus/sdk": "^10",
+    "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@t3-oss/env-nextjs": "^0.6.1",
     "antd": "^5.8.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
@@ -30,13 +35,14 @@
     "react": "^18.2.0",
     "react-directus": "^0.0.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
-    "zod": "^3.22.2"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
