--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-directus": "^0.0.2",
