--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@ant-design/icons": "^5.2.5",
     "@directus/sdk": "^10.3.5",
     "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
