chore : updated example.env and env variables names

--- a/example.env
+++ b/example.env
@@ -1,7 +1,13 @@
+
 # -----------------------------------------------------------------------------
 # App
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# -----------------------------------------------------------------------------
+# Environment
+# -----------------------------------------------------------------------------
+NODE_ENV=development
 
 
 # -----------------------------------------------------------------------------
@@ -13,3 +19,10 @@ DIRECTUS_USER_CREATOR_TOKEN=XXXXXXXXXX
 DIRECTUS_TOKEN_EXPIRATION_ADJUSTMENT=86400
 DIRECTUS_DEFAULT_ROLE_ID=XXXXX
 DIRECTUS_PROJECT_NAME=directus
+
+
+# -----------------------------------------------------------------------------
+# Posthog (Analytics)
+# -----------------------------------------------------------------------------
+POSTHOG_KEY=XXXXXXXX
+POSTHOG_HOST_URL=https://app.posthog.com # or keep your custom url
