--- a/example.env
+++ b/example.env
@@ -24,5 +24,5 @@ DIRECTUS_PROJECT_NAME=directus
 # -----------------------------------------------------------------------------
 # Posthog (Analytics)
 # -----------------------------------------------------------------------------
-POSTHOG_KEY=XXXXXXXX
-POSTHOG_HOST_URL=https://app.posthog.com # or keep your custom url
+NEXT_PUBLIC_POSTHOG_KEY=XXXXXXXX
+NEXT_PUBLIC_HOST_URL=https://app.posthog.com # or keep your custom url
